Fix footer content overlapping with main content

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 
 /* FOOTER COMPONENT */
 .footer {
-  @apply absolute bottom-0 left-[50%] translate-x-[-50%] text-center whitespace-nowrap;
+  @apply mt-20 text-center whitespace-nowrap;
 }
 .footer-text {
   @apply italic py-1 text-sm;
